--- a/.github/workflows/update-nextcloud-ocp.yml
+++ b/.github/workflows/update-nextcloud-ocp.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branches: ["master", "stable25", "stable24", "stable23"]
+        branches: ["main", "stable25", "stable24", "stable23"]
 
     name: update-nextcloud-ocp-${{ matrix.branches }}
 
